--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "phpstan/phpdoc-parser": "^1.23",
         "symfony/asset": "6.3.*",
         "symfony/console": "6.3.*",
+        "symfony/doctrine-bridge": "6.3.*",
         "symfony/doctrine-messenger": "6.3.*",
         "symfony/dotenv": "6.3.*",
         "symfony/expression-language": "6.3.*",
@@ -31,6 +32,7 @@
         "symfony/property-info": "6.3.*",
         "symfony/runtime": "6.3.*",
         "symfony/security-bundle": "6.3.*",
+        "symfony/security-csrf": "6.3.*",
         "symfony/serializer": "6.3.*",
         "symfony/string": "6.3.*",
         "symfony/translation": "6.3.*",
